--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <h1>Your Name</h1>
-    <img src="myphoto.png" alt="Your Photo">
+    <img src="mypic.jpg" alt="Your Photo">
     <p>🚀 Data Manager | Clinical Research | Tech Enthusiast</p>
     
     <h2>About Me</h2>
