--- a/index.html
+++ b/index.html
@@ -3,45 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Utkarsh Sinha - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
             text-align: center;
+            background-color: #f4f4f4;
         }
         img {
             width: 200px;
             border-radius: 50%;
             margin-bottom: 20px;
         }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
         .projects {
             text-align: left;
-            max-width: 600px;
-            margin: 0 auto;
+            margin-top: 20px;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #34495e;
+        }
+        a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1>Your Name</h1>
-    <img src="mypic.jpg" alt="Your Photo">
-    <p>🚀 Data Manager | Clinical Research | Tech Enthusiast</p>
-    
-    <h2>About Me</h2>
-    <p>I'm a Data Manager with experience in Clinical Research, Web Development, and Data Analytics.</p>
 
-    <h2>Projects</h2>
-    <div class="projects">
-        <h3>MyLung+ App</h3>
-        <p>A HIPAA-compliant lung screening app built using Adalo & Firebase.</p>
-        <a href="your-project-link">View Project</a>
+    <div class="container">
+        <h1>Utkarsh Sinha</h1>
+        <img src="mypic.jpg" alt="Your Photo">
+        <p>🚀 Data Manager | Tech Enthusiast </p>
+        
+        <h2>About Me</h2>
+        <p>
+            I am a <strong>Computational Data Science Engineer</strong> from <strong>Penn State University</strong>, currently working as a 
+            <strong>Data Manager at Lung Innovations Network, DuBois</strong>. With a strong foundation in 
+            <strong>data analytics, machine learning, cloud computing, and full-stack development</strong>, 
+            I specialize in building scalable solutions that optimize processes and drive data-driven decision-making.
+        </p>
+        <p>
+            My experience spans across <strong>healthcare, research, software development, and business intelligence</strong>, 
+            allowing me to adapt and innovate in diverse environments.  
+        </p>
+        <p>
+            I am passionate about <strong>leveraging technology to solve complex problems</strong>, whether it's optimizing workflows, 
+            enhancing data-driven insights, or developing innovative applications. Always eager to explore new challenges, 
+            I thrive in roles that require <strong>problem-solving, automation, and strategic thinking</strong> to create impactful solutions.
+        </p>
 
-        <h3>Movie Recommendation System</h3>
-        <p>Designed a movie recommendation system using TF-IDF, Collaborative Filtering, and Hybrid models.</p>
-        <a href="your-github-link">View Project</a>
+        <h2>Projects</h2>
+        <div class="projects">
+            <h3>MyLung+ App</h3>
+            <p>A HIPAA-compliant lung screening app built using Adalo & Firebase.</p>
+            <a href="your-project-link">View Project</a>
+
+            <h3>Movie Recommendation System</h3>
+            <p>Designed a movie recommendation system using TF-IDF, Collaborative Filtering, and Hybrid models.</p>
+            <a href="your-github-link">View Project</a>
+        </div>
+
+        <h2>Contact</h2>
+        <p>Email: your.email@example.com | <a href="https://www.linkedin.com/in/yourusername">LinkedIn</a></p>
     </div>
 
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com | <a href="https://www.linkedin.com/in/yourusername">LinkedIn</a></p>
 </body>
 </html>
