--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .projects {
             text-align: left;
-            margin-top: 20px;
         }
-        h1, h2 {
+        h1, h2, h3 {
             color: #2c3e50;
         }
         p {
@@ -50,38 +47,39 @@
     <div class="container">
         <h1>Utkarsh Sinha</h1>
         <img src="mypic.jpg" alt="Your Photo">
-        <p>🚀 Data Manager | Tech Enthusiast </p>
+        <p>🚀 Data Manager | Tech Enthusiast</p>
         
         <h2>About Me</h2>
         <p>
-            I am a <strong>Computational Data Science Engineer</strong> from <strong>Penn State University</strong>, currently working as a 
-            <strong>Data Manager at Lung Innovations Network, DuBois</strong>. With a strong foundation in 
-            <strong>data analytics, machine learning, cloud computing, and full-stack development</strong>, 
+            I am a Computational Data Science Engineer from Penn State University, currently working as a 
+            Data Manager at Lung Innovations Network, DuBois. With expertise in 
+            data analytics, machine learning, cloud computing, and full-stack development, 
             I specialize in building scalable solutions that optimize processes and drive data-driven decision-making.
         </p>
         <p>
-            My experience spans across <strong>healthcare, research, software development, and business intelligence</strong>, 
+            My experience spans healthcare, research, software development, and business intelligence, 
             allowing me to adapt and innovate in diverse environments.  
         </p>
-        <p>
-            I am passionate about <strong>leveraging technology to solve complex problems</strong>, whether it's optimizing workflows, 
-            enhancing data-driven insights, or developing innovative applications. Always eager to explore new challenges, 
-            I thrive in roles that require <strong>problem-solving, automation, and strategic thinking</strong> to create impactful solutions.
-        </p>
-
         <h2>Projects</h2>
         <div class="projects">
-            <h3>MyLung+ App</h3>
-            <p>A HIPAA-compliant lung screening app built using Adalo & Firebase.</p>
+            <h3>Full-Stack Movie Recommender System (Dec 2024)</h3>
+            <p>Developed a Movie Recommender System using Collaborative & Content-Based filtering.  
+            Implemented ML models (scikit-learn, NumPy) and evaluated **Precision, Recall, F1 Score, RMSE, MAE**.  
+            Designed an interactive interface for real-time recommendations.</p>
             <a href="your-project-link">View Project</a>
 
-            <h3>Movie Recommendation System</h3>
-            <p>Designed a movie recommendation system using TF-IDF, Collaborative Filtering, and Hybrid models.</p>
-            <a href="your-github-link">View Project</a>
+            <h3>SEDTAPP Engineering Design Project (Jan 2020)</h3>
+            <p>Designed a low-cost sock aid tool for elderly & disabled individuals using **SolidWorks**.  
+            Focused on **resource optimization, teamwork, and prototyping**.  
+            Project won **1st place for innovative design**.</p>
+
+            <h3>Database Management System (Dec 2023)</h3>
+            <p>Built a **Student Database Management System** using **PHP & MySQL**.  
+            Designed a user-friendly interface with **data encryption for security**.</p>
         </div>
 
         <h2>Contact</h2>
-        <p>Email: your.email@example.com | <a href="https://www.linkedin.com/in/yourusername">LinkedIn</a></p>
+        <p>Email: sinhautkarsh51@yahoo.com | <a href="https://www.linkedin.com/in/utkarsh-sinha-98a795194/">LinkedIn</a></p>
     </div>
 
 </body>
