--- a/index.html
+++ b/index.html
@@ -5,41 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utkarsh Sinha - Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        img {
-            width: 200px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
-        h1, h2, h3 {
-            color: #2c3e50;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #34495e;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
+    body {
+        font-family: Arial, sans-serif;
+        margin: 40px;
+        text-align: center;
+        background-color: #f4f4f4;
+    }
+    img {
+        width: 200px;
+        border-radius: 50%;
+        margin-bottom: 20px;
+    }
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        background: white;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        text-align: center; /* Center-align all text inside */
+    }
+    .projects {
+        text-align: left; /* Keep project descriptions left-aligned */
+        margin-top: 20px;
+    }
+    h1, h2, h3 {
+        color: #2c3e50;
+    }
+    p {
+        font-size: 18px;
+        line-height: 1.6;
+        color: #34495e;
+    }
+    a {
+        color: #2980b9;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -64,18 +68,16 @@
         <div class="projects">
             <h3>Full-Stack Movie Recommender System (Dec 2024)</h3>
             <p>Developed a Movie Recommender System using Collaborative & Content-Based filtering.  
-            Implemented ML models (scikit-learn, NumPy) and evaluated **Precision, Recall, F1 Score, RMSE, MAE**.  
+            Implemented ML models (scikit-learn, NumPy) and evaluated Precision, Recall, F1 Score, RMSE, MAE.  
             Designed an interactive interface for real-time recommendations.</p>
-            <a href="your-project-link">View Project</a>
 
             <h3>SEDTAPP Engineering Design Project (Jan 2020)</h3>
-            <p>Designed a low-cost sock aid tool for elderly & disabled individuals using **SolidWorks**.  
-            Focused on **resource optimization, teamwork, and prototyping**.  
-            Project won **1st place for innovative design**.</p>
+            <p>Designed a low-cost sock aid tool for elderly & disabled individuals using SolidWorks.  
+            Focused on resource optimization, teamwork, and prototyping.  
 
             <h3>Database Management System (Dec 2023)</h3>
-            <p>Built a **Student Database Management System** using **PHP & MySQL**.  
-            Designed a user-friendly interface with **data encryption for security**.</p>
+            <p>Built a Student Database Management System using PHP & MySQL.  
+            Designed a user-friendly interface with **data encryption for security.</p>
         </div>
 
         <h2>Contact</h2>
