--- a/index.html
+++ b/index.html
@@ -5,50 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utkarsh Sinha - Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        img {
-            width: 200px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        .content {
-            text-align: left;
-        }
-        .section {
-            margin-top: 30px;
-        }
-        h1, h2, h3 {
-            color: #2c3e50;
-        }
-        p, ul {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #34495e;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
+    body {
+        font-family: Arial, sans-serif;
+        margin: 40px;
+        text-align: center;
+        background-color: #f4f4f4;
+    }
+    img {
+        width: 200px;
+        border-radius: 50%;
+        margin-bottom: 20px;
+    }
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        background: white;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+    .content {
+        text-align: left;
+    }
+    .section {
+        margin-top: 30px;
+    }
+    .contact {
+        text-align: center; /* Center-align only the Contact section */
+        margin-top: 30px;
+    }
+    h1, h2, h3 {
+        color: #2c3e50;
+    }
+    p, ul {
+        font-size: 18px;
+        line-height: 1.6;
+        color: #34495e;
+    }
+    ul {
+        padding-left: 20px;
+    }
+    a {
+        color: #2980b9;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -62,13 +65,13 @@
             <div class="section">
                 <h2>About Me</h2>
                 <p>
-                    I am a <strong>Computational Data Science Engineer</strong> from <strong>Penn State University</strong>, currently working as a 
-                    <strong>Data Manager at Lung Innovations Network, DuBois</strong>. With expertise in 
-                    <strong>data analytics, machine learning, cloud computing, and full-stack development</strong>, 
+                    I am a Computational Data Science Engineer from Penn State University, currently working as a 
+                    Data Manager at Lung Innovations Network, DuBois. With expertise in 
+                    data analytics, machine learning, cloud computing, and full-stack development, 
                     I specialize in building scalable solutions that optimize processes and drive data-driven decision-making.
                 </p>
                 <p>
-                    My experience spans <strong>healthcare, research, software development, and business intelligence</strong>, 
+                    My experience spans healthcare, research, software development, and business intelligence, 
                     allowing me to adapt and innovate in diverse environments.
                 </p>
             </div>
