--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         margin-top: 30px;
     }
     .contact {
-        text-align: center; /* Center-align only the Contact section */
-        margin-top: 30px;
-    }
+    text-align: center; /* Ensure text is centered */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
     h1, h2, h3 {
         color: #2c3e50;
     }
