--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
     .content {
-        text-align: left;
+        text-align: center;
     }
     .section {
         margin-top: 30px;
