--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
             <div class="section">
                 <h2>Certifications</h2>
                 <ul>
-                    <li>Clinical Trials Data Management and Quality Assurance - The Johns Hopkins University</li>
-                    <li>Business Foundations Specialization - University of Pennsylvania</li>
-                    <li>Google Cloud: Managing Change When Moving to Cloud - Google</li>
-                    <li>Good Clinical Practice (GCP) Certification - NIDA CCTN CTN</li>
-                    <li>Transporting Dangerous Goods Training Certification - Mayo Clinic</li>
-                    <li>Foundations of Data Science - Google</li>
+                   Clinical Trials Data Management and Quality Assurance - The Johns Hopkins University
+                   Business Foundations Specialization - University of Pennsylvania
+                   Google Cloud: Managing Change When Moving to Cloud - Google
+                   Good Clinical Practice (GCP) Certification - NIDA CCTN CTN
+                   Transporting Dangerous Goods Training Certification - Mayo Clinic
+                   Foundations of Data Science - Google
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Software Skills</h2>
                 <ul>
-                    <li><strong>Programming Languages:</strong> Python (scikit-learn), C++, RStudio, SQL, JavaScript, PHP, Scala</li>
-                    <li><strong>Web Development:</strong> Flask, HTML, XAMPP</li>
-                    <li><strong>Tools:</strong> Microsoft Excel, PowerPoint, Word, GitHub, Power BI</li>
-                    <li><strong>Creative:</strong> Adobe Premiere Pro, Photoshop, After Effects</li>
+                    Programming Languages: Python (scikit-learn), C++, RStudio, SQL, JavaScript, PHP, Scala
+                    Web Development: Flask, HTML, XAMPP
+                    Tools: Microsoft Excel, PowerPoint, Word, GitHub, Power BI
+                    Creative: Adobe Premiere Pro, Photoshop, After Effects
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Leadership & Involvement</h2>
                 <ul>
-                    <li><strong>Winner, SEDTAPP E-Design Project (2020):</strong> Led a team to design a tool for improving accessibility for disabled users.</li>
-                    <li><strong>Member, Penn State Vedic Society (2019-20):</strong> Organized events promoting cultural awareness.</li>
-                    <li><strong>Participant, Cornell University International Debate Program (2018):</strong> Engaged in a week-long International Debate Program at Cornell University.</li>
-                    <li><strong>House Captain, FAIPS-DPS High School (2019):</strong> Led a team of over 50 students in academic and cultural events.</li>
+                    Winner, SEDTAPP E-Design Project (2020)
+                    Member, Penn State Vedic Society (2019-20)
+                    Participant, Cornell University International Debate Program (2018)
+                    House Captain, FAIPS-DPS High School (2019)
                 </ul>
             </div>
 
