--- a/index.html
+++ b/index.html
@@ -5,57 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utkarsh Sinha - Portfolio</title>
     <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 40px;
-        text-align: center;
-        background-color: #f4f4f4;
-    }
-    img {
-        width: 200px;
-        border-radius: 50%;
-        margin-bottom: 20px;
-    }
-    .container {
-        max-width: 800px;
-        margin: 0 auto;
-        background: white;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-    .content {
-        text-align: center;
-    }
-    .section {
-        margin-top: 30px;
-    }
-    .contact {
-    text-align: center; /* Ensure text is centered */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
-}
-    h1, h2, h3 {
-        color: #2c3e50;
-    }
-    p, ul {
-        font-size: 18px;
-        line-height: 1.6;
-        color: #34495e;
-    }
-    ul {
-        padding-left: 20px;
-    }
-    a {
-        color: #2980b9;
-        text-decoration: none;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+            text-align: center;
+        }
+        img {
+            width: 200px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+        .content {
+            text-align: left;
+        }
+        .section {
+            margin-top: 30px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        .section:last-child {
+            border-bottom: none;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #34495e;
+        }
+        ul {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #34495e;
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 5px;
+        }
+        a {
+            color: #2980b9;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        /* Centered Contact Section */
+        .contact {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
@@ -69,13 +84,13 @@
             <div class="section">
                 <h2>About Me</h2>
                 <p>
-                    I am a Computational Data Science Engineer from Penn State University, currently working as a 
-                    Data Manager at Lung Innovations Network, DuBois. With expertise in 
-                    data analytics, machine learning, cloud computing, and full-stack development, 
+                    I am a <strong>Computational Data Science Engineer</strong> from <strong>Penn State University</strong>, currently working as a 
+                    <strong>Data Manager at Lung Innovations Network, DuBois</strong>. With expertise in 
+                    <strong>data analytics, machine learning, cloud computing, and full-stack development</strong>, 
                     I specialize in building scalable solutions that optimize processes and drive data-driven decision-making.
                 </p>
                 <p>
-                    My experience spans healthcare, research, software development, and business intelligence, 
+                    My experience spans <strong>healthcare, research, software development, and business intelligence</strong>, 
                     allowing me to adapt and innovate in diverse environments.
                 </p>
             </div>
@@ -83,55 +98,56 @@
             <div class="section">
                 <h2>Projects</h2>
                 <h3>Full-Stack Movie Recommender System (Dec 2024)</h3>
-                <p>Developed a Movie Recommender System using Collaborative & Content-Based filtering.  
-                Implemented ML models (scikit-learn, NumPy) and evaluated Precision, Recall, F1 Score, RMSE, MAE.  
-                Designed an interactive interface for real-time recommendations.</p>
+                <p>Developed a Movie Recommender System using **Collaborative & Content-Based filtering**.  
+                Implemented ML models (**scikit-learn, NumPy**) and evaluated **Precision, Recall, F1 Score, RMSE, MAE**.  
+                Designed an interactive interface for **real-time recommendations**.</p>
 
                 <h3>SEDTAPP Engineering Design Project (Jan 2020)</h3>
-                <p>Designed a low-cost sock aid tool for elderly & disabled individuals using SolidWorks.  
-                Focused on resource optimization, teamwork, and prototyping.  
-                Project won <strong>1st place for innovative design</strong>.</p>
+                <p>Designed a **low-cost sock aid tool** for elderly & disabled individuals using **SolidWorks**.  
+                Focused on **resource optimization, teamwork, and prototyping**.  
+                Project won **1st place for innovative design**.</p>
 
                 <h3>Database Management System (Dec 2023)</h3>
-                <p>Built a Student Database Management System using PHP & MySQL.  
-                Designed a user-friendly interface with <strong>data encryption for security</strong>.</p>
+                <p>Built a **Student Database Management System** using **PHP & MySQL**.  
+                Designed a user-friendly interface with **data encryption for security**.</p>
             </div>
 
             <div class="section">
                 <h2>Certifications</h2>
                 <ul>
-                   Clinical Trials Data Management and Quality Assurance - The Johns Hopkins University
-                   Business Foundations Specialization - University of Pennsylvania
-                   Google Cloud: Managing Change When Moving to Cloud - Google
-                   Good Clinical Practice (GCP) Certification - NIDA CCTN CTN
-                   Transporting Dangerous Goods Training Certification - Mayo Clinic
-                   Foundations of Data Science - Google
+                    <li>Clinical Trials Data Management and Quality Assurance - The Johns Hopkins University</li>
+                    <li>Business Foundations Specialization - University of Pennsylvania</li>
+                    <li>Google Cloud: Managing Change When Moving to Cloud - Google</li>
+                    <li>Good Clinical Practice (GCP) Certification - NIDA CCTN CTN</li>
+                    <li>Transporting Dangerous Goods Training Certification - Mayo Clinic</li>
+                    <li>Foundations of Data Science - Google</li>
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Software Skills</h2>
                 <ul>
-                    Programming Languages: Python (scikit-learn), C++, RStudio, SQL, JavaScript, PHP, Scala
-                    Web Development: Flask, HTML, XAMPP
-                    Tools: Microsoft Excel, PowerPoint, Word, GitHub, Power BI
-                    Creative: Adobe Premiere Pro, Photoshop, After Effects
+                    <li><strong>Programming Languages:</strong> Python (scikit-learn), C++, RStudio, SQL, JavaScript, PHP, Scala</li>
+                    <li><strong>Web Development:</strong> Flask, HTML, XAMPP</li>
+                    <li><strong>Tools:</strong> Microsoft Excel, PowerPoint, Word, GitHub, Power BI</li>
+                    <li><strong>Creative:</strong> Adobe Premiere Pro, Photoshop, After Effects</li>
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Leadership & Involvement</h2>
                 <ul>
-                    Winner, SEDTAPP E-Design Project (2020)
-                    Member, Penn State Vedic Society (2019-20)
-                    Participant, Cornell University International Debate Program (2018)
-                    House Captain, FAIPS-DPS High School (2019)
+                    <li><strong>Winner, SEDTAPP E-Design Project (2020):</strong> Led a team to design a tool for improving accessibility for disabled users.</li>
+                    <li><strong>Member, Penn State Vedic Society (2019-20):</strong> Organized events promoting cultural awareness.</li>
+                    <li><strong>Participant, Cornell University International Debate Program (2018):</strong> Engaged in a week-long International Debate Program at Cornell University.</li>
+                    <li><strong>House Captain, FAIPS-DPS High School (2019):</strong> Led a team of over 50 students in academic and cultural events.</li>
                 </ul>
             </div>
 
-            <div class="section">
+            <div class="section contact">
                 <h2>Contact</h2>
-                <p>Email: sinhautkarsh51@yahoo.com | <a href="https://www.linkedin.com/in/utkarsh-sinha-98a795194/">LinkedIn</a></p>
+                <p>Email: <a href="mailto:sinhautkarsh51@yahoo.com">sinhautkarsh51@yahoo.com</a></p>
+                <p><a href="https://www.linkedin.com/in/utkarsh-sinha-98a795194/">LinkedIn Profile</a></p>
             </div>
         </div>
     </div>
