--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             <div class="section">
                 <h2>About Me</h2>
                 <p>
-                    I am a <strong>Computational Data Science Engineer</strong> from <strong>Penn State University</strong>, currently working as a 
-                    <strong>Data Manager at Lung Innovations Network, DuBois</strong>. With expertise in 
-                    <strong>data analytics, machine learning, cloud computing, and full-stack development</strong>, 
+                    I am a Computational Data Science Engineer from Penn State University, currently working as a 
+                    Data Manager at Lung Innovations Network, DuBois. With expertise in 
+                    data analytics, machine learning, cloud computing, and full-stack development, 
                     I specialize in building scalable solutions that optimize processes and drive data-driven decision-making.
                 </p>
                 <p>
-                    My experience spans <strong>healthcare, research, software development, and business intelligence</strong>, 
+                    My experience spans healthcare, research, software development, and business intelligence, 
                     allowing me to adapt and innovate in diverse environments.
                 </p>
             </div>
@@ -98,18 +98,18 @@
             <div class="section">
                 <h2>Projects</h2>
                 <h3>Full-Stack Movie Recommender System (Dec 2024)</h3>
-                <p>Developed a Movie Recommender System using **Collaborative & Content-Based filtering**.  
-                Implemented ML models (**scikit-learn, NumPy**) and evaluated **Precision, Recall, F1 Score, RMSE, MAE**.  
-                Designed an interactive interface for **real-time recommendations**.</p>
+                <p>Developed a Movie Recommender System using Collaborative & Content-Based filtering.  
+                Implemented ML models (scikit-learn, NumPy) and evaluated Precision, Recall, F1 Score, RMSE, MAE.  
+                Designed an interactive interface for real-time recommendations.</p>
 
                 <h3>SEDTAPP Engineering Design Project (Jan 2020)</h3>
-                <p>Designed a **low-cost sock aid tool** for elderly & disabled individuals using **SolidWorks**.  
-                Focused on **resource optimization, teamwork, and prototyping**.  
-                Project won **1st place for innovative design**.</p>
+                <p>Designed a low-cost sock aid tool for elderly & disabled individuals using SolidWorks.  
+                Focused on resource optimization, teamwork, and prototyping.  
+                Project won 1st place for innovative design.</p>
 
                 <h3>Database Management System (Dec 2023)</h3>
-                <p>Built a **Student Database Management System** using **PHP & MySQL**.  
-                Designed a user-friendly interface with **data encryption for security**.</p>
+                <p>Built a Student Database Management System using PHP & MySQL.  
+                Designed a user-friendly interface with data encryption for security.</p>
             </div>
 
             <div class="section">
@@ -137,10 +137,10 @@
             <div class="section">
                 <h2>Leadership & Involvement</h2>
                 <ul>
-                    <li><strong>Winner, SEDTAPP E-Design Project (2020):</strong> Led a team to design a tool for improving accessibility for disabled users.</li>
-                    <li><strong>Member, Penn State Vedic Society (2019-20):</strong> Organized events promoting cultural awareness.</li>
-                    <li><strong>Participant, Cornell University International Debate Program (2018):</strong> Engaged in a week-long International Debate Program at Cornell University.</li>
-                    <li><strong>House Captain, FAIPS-DPS High School (2019):</strong> Led a team of over 50 students in academic and cultural events.</li>
+                    <li>Winner, SEDTAPP E-Design Project (2020)</li>
+                    <li>Member, Penn State Vedic Society (2019-20)</li>
+                    <li>Participant, Cornell University International Debate Program (2018)</li>
+                    <li>House Captain, FAIPS-DPS High School (2019)</li>
                 </ul>
             </div>
 
